--- a/week3/student-club-roster/index.html
+++ b/week3/student-club-roster/index.html
@@ -7,61 +7,86 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Student Club Roster</h1>
+    <div class="title">
+      <h1>Student Club Roster</h1>
+      <h2>Add Students</h2>
+    </div>
 
-    <h2>Add Students</h2>
+    <div class="form">
+      <label for="student-name">Student Name</label
+      ><input id="student-name" name="student-name" />
+      <br />
+      <label for="student-id">Student ID</label
+      ><input id="student-id" name="student-id" />
+      <br />
+      <label for="student-gpa">Student GPA</label
+      ><input id="student-gpa" name="student-gpa" type="number" />
+      <br />
+      <button id="add-student">Add Student</button>
+    </div>
 
-    <label for="student-name">Student Name</label
-    ><input id="student-name" name="student-name" />
-    <br />
-    <label for="student-id">Student ID</label
-    ><input id="student-id" name="student-id" />
-    <br />
-    <label for="student-gpa">Student GPA</label
-    ><input id="student-gpa" name="student-gpa" type="number" />
-    <br />
-    <button id="add-student">Add Student</button>
+    <div class="list">
+      <h2>Student List</h2>
 
-    <h2>Student List</h2>
+      <p>
+        There are
+        <span id="student-count"> </span>
+        student(s) in the club.
+      </p>
 
-    <p>
-      There are
-      <span id="student-count">
-        <!-- use JavaScript to count the number of students, and show here -->
-      </span>
-      student(s) in the club.
-    </p>
-
-    <ul id="student-list">
-      <!-- use JavaScript to create li elements  -->
-    </ul>
-
-    <button id="remove-selected-students">Remove selected students</button>
+      <ul id="student-list">
+        <!-- use JavaScript to create li elements  -->
+      </ul>
+    </div>
+    <button id="button remove-selected-students">
+      Remove selected students
+    </button>
 
     <script>
+      let name = document.querySelector("#student-name");
+      let id = document.querySelector("#student-id");
+      let gpa = document.querySelector("#student-gpa");
+      let addStudentButton = document.querySelector("#add-student");
+      let studentCount = document.querySelector("#student-count");
+      let studentList = document.querySelector("#student-list");
+
+      window.addEventListener("load", () => {
+        studentCount.textContent = 0;
+      });
+
+      addStudentButton.addEventListener("click", () => {
+        studentCount.textContent++;
+        let createEl = document.createElement("li");
+        createEl.innerHTML = `${name.value}, id: ${id.value}, GPA: ${gpa.value}`;
+        studentList.appendChild(createEl);
+        name.value = "";
+        id.value = "";
+        gpa.value = "";
+        name.focus();
+      });
       /* Add the following functionality to this page
 
-    When the page loads
-        - Using JavaScript, display 0 in span#student-count
+      When the page loads
+          - Using JavaScript, display 0 in span#student-count
 
-    When button#add-students is clicked
-        - Read the value from the student-name input
-        - Read the value from the student-id input
-        - Read the value from the student-gpa input
-        - Create a new li element
-        - Set the new li element innerHTML to a string containing the student's name, id, and GPA
-            - for example "Beyonce Knowles, id: aa1234bb, GPA: 3.8"
-            - Use a template string  
-        - Add a click event handler to each li element. 
-            When a li element is clicked, add the class="selected" to that li element.
-            When a li element is clicked again, remove the class="selected" from that li element
-        - Add the new li element to ul#student-list element 
-        - Update the span#student-count value to the new number of students
+      When button#add-students is clicked
+          - Read the value from the student-name input
+          - Read the value from the student-id input
+          - Read the value from the student-gpa input
+          - Create a new li element
+          - Set the new li element innerHTML to a string containing the student's name, id, and GPA
+              - for example "Beyonce Knowles, id: aa1234bb, GPA: 3.8"
+              - Use a template string
+          - Add a click event handler to each li element.
+              When a li element is clicked, add the class="selected" to that li element.
+              When a li element is clicked again, remove the class="selected" from that li element
+          - Add the new li element to ul#student-list element
+          - Update the span#student-count value to the new number of students
 
-    When button#remove-selected-students is clicked, 
-        - remove all of the elements with the class="selected" from the list. 
-        
-    */
+      When button#remove-selected-students is clicked,
+          - remove all of the elements with the class="selected" from the list.
+
+      */
     </script>
   </body>
 </html>
