--- a/week3/student-club-roster/index.html
+++ b/week3/student-club-roster/index.html
@@ -66,6 +66,13 @@
         name.focus();
       });
 
+      // use click method on button when using 'Enter' key
+      document.addEventListener("keyup", () => {
+        if (event.keyCode == 13) {
+          addStudentButton.click();
+        }
+      });
+
       addStudentButton.addEventListener("click", () => {
         //   check if name is null or only numbers
         if (!name.value || Number.isInteger(parseInt(name.value)) === true) {
@@ -112,32 +119,27 @@
       });
 
       removeStudentButton.addEventListener("click", () => {
+        //   select all the list items if any
         let items = document.querySelectorAll("li");
-        console.log(items);
+        let count = 0;
+        // loop through them
+        items.forEach((item) => {
+          if (item.classList == "selected") {
+            count++;
+            swal({
+              title: "Item(s) Deleted",
+              text: `${count} item${
+                count != 1 ? "s were deleted" : " was deleted"
+              }`,
+              icon: "success",
+              button: "Close",
+            });
+            item.remove(); //remove those checked (with class 'selected')
+          }
+        });
+        // update list of students count
+        studentCount.textContent -= count;
       });
-      /* Add the following functionality to this page
-
-      When the page loads
-          - Using JavaScript, display 0 in span#student-count
-
-      When button#add-students is clicked
-          - Read the value from the student-name input
-          - Read the value from the student-id input
-          - Read the value from the student-gpa input
-          - Create a new li element
-          - Set the new li element innerHTML to a string containing the student's name, id, and GPA
-              - for example "Beyonce Knowles, id: aa1234bb, GPA: 3.8"
-              - Use a template string
-          - Add a click event handler to each li element.
-              When a li element is clicked, add the class="selected" to that li element.
-              When a li element is clicked again, remove the class="selected" from that li element
-          - Add the new li element to ul#student-list element
-          - Update the span#student-count value to the new number of students
-
-      When button#remove-selected-students is clicked,
-          - remove all of the elements with the class="selected" from the list.
-
-      */
     </script>
   </body>
 </html>
