--- a/week5/drawing-program/index.html
+++ b/week5/drawing-program/index.html
@@ -19,7 +19,13 @@
         align-items: center;
         width: 100%;
         flex-wrap: wrap;
-        background-color: steelblue;
+        background: rgb(230, 33, 82);
+        background: linear-gradient(
+          90deg,
+          rgba(230, 33, 82, 1) 0%,
+          rgba(213, 76, 137, 1) 35%,
+          rgba(100, 0, 255, 1) 100%
+        );
         color: whitesmoke;
       }
 
@@ -48,11 +54,18 @@
       #canvas {
         border: 1px whitesmoke solid;
         border-radius: 25px;
+        background-color: white;
       }
 
+      .buttons {
+        width: 400px;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+      }
       .buttons button {
-        margin-right: 10px;
-        padding: 5px 15px;
+        width: 150px;
+        padding: 10px 15px;
         border-radius: 10px;
         border: none;
         outline: none;
@@ -65,10 +78,10 @@
         transition: 400ms;
       }
       #save-draw-btn {
-        background-color: tomato;
+        background-color: #6804fb;
       }
       #clear-draw-btn {
-        background-color: salmon;
+        background-color: #e52253;
       }
     </style>
   </head>
@@ -85,8 +98,8 @@
     </div>
     <canvas id="canvas" height="400" width="400"></canvas>
 
+    <a id="download-draw"></a>
     <div class="buttons">
-      <a id="download-draw"></a>
       <button type="submit" id="save-draw-btn" onclick="download()">
         Save Draw
       </button>
