--- a/midterm-project/index.html
+++ b/midterm-project/index.html
@@ -13,6 +13,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./css/main.css" />
+
+    <script defer src="index.js"></script>
     <title>Inhubgraphic</title>
   </head>
   <body>
@@ -48,7 +50,11 @@
                 placeholder="GitHub username"
                 aria-label="GitHub username"
               />
-              <button class="btn btn-outline-success" type="submit">
+              <button
+                id="search-button"
+                class="btn btn-outline-success"
+                type="submit"
+              >
                 Search
               </button>
             </form>
