--- a/midterm-project/index.html
+++ b/midterm-project/index.html
@@ -21,7 +21,7 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">INHUBGRAPHIC</a>
+          <a class="navbar-brand fw-bold" href="#">INHUBGRAPHIC</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -50,11 +50,7 @@
                 placeholder="GitHub username"
                 aria-label="GitHub username"
               />
-              <button
-                id="search-button"
-                class="btn btn-outline-success"
-                type="submit"
-              >
+              <button id="search-button" class="btn btn-danger" type="submit">
                 Search
               </button>
             </form>
@@ -62,6 +58,40 @@
         </div>
       </nav>
     </header>
+
+    <main class="mt-4">
+      <div class="container">
+        <div class="row text-center mt-4">
+          <h4 id="user" class="username"></h4>
+        </div>
+        <div id="card-container" class="row card-list">
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="card shadow">
+              <div class="card-body">
+                <h5 class="card-title text-white fw-bold">DinkyMovies</h5>
+                <p class="card-text fw-light">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-danger">View Code</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-6 col-lg-4 mb-4">
+            <div class="card shadow">
+              <div class="card-body">
+                <h5 class="card-title text-white fw-bold">DinkyMovies</h5>
+                <p class="card-text fw-light">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+                <a href="#" class="btn btn-danger">View Code</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
