--- a/midterm-project/index.html
+++ b/midterm-project/index.html
@@ -62,8 +62,9 @@
     <main class="mt-4">
       <div class="container">
         <div class="row text-center mt-4">
-          <h4 id="user" class="username"></h4>
+          <h4 id="user" class="username mb-4"></h4>
         </div>
+        <div id="no-reposMsg" class="no-repos"></div>
         <div id="card-container" class="row card-list">
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="card shadow">
