--- a/midterm-project/index.html
+++ b/midterm-project/index.html
@@ -86,7 +86,7 @@
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
                 </p>
-                <a href="#" class="btn btn-danger">View Code</a>
+                <a class="btn btn-danger">View Code</a>
               </div>
             </div>
           </div>
