--- a/midterm-project/index.html
+++ b/midterm-project/index.html
@@ -14,6 +14,10 @@
     />
     <link rel="stylesheet" href="./css/main.css" />
 
+    <script
+      defer
+      src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"
+    ></script>
     <script defer src="index.js"></script>
     <title>Inhubgraphic</title>
   </head>
@@ -60,6 +64,11 @@
     </header>
 
     <main class="mt-4">
+      <div class="dark-mode container-fluid">
+        <p class="dark-mode-title">Dark Mode</p>
+        <input type="checkbox" class="checkbox" id="checkbox" />
+        <label class="switch" for="checkbox"> </label>
+      </div>
       <div class="container">
         <div class="row text-center mt-4">
           <h4 id="user" class="username mb-4"></h4>
@@ -69,7 +78,7 @@
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="card shadow">
               <div class="card-body">
-                <h5 class="card-title text-white fw-bold">DinkyMovies</h5>
+                <h5 class="card-title fw-bold">DinkyMovies</h5>
                 <p class="card-text fw-light">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -81,7 +90,7 @@
           <div class="col-12 col-md-6 col-lg-4 mb-4">
             <div class="card shadow">
               <div class="card-body">
-                <h5 class="card-title text-white fw-bold">DinkyMovies</h5>
+                <h5 class="card-title fw-bold">DinkyMovies</h5>
                 <p class="card-text fw-light">
                   Some quick example text to build on the card title and make up
                   the bulk of the card's content.
@@ -92,11 +101,19 @@
           </div>
         </div>
       </div>
+
+      <!-- Modal -->
+      <div class="modal"></div>
     </main>
 
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
+      integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"
+      integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG"
       crossorigin="anonymous"
     ></script>
   </body>
