update styles, add data to welcoming page and each project stats, modify classes for card buttons

--- a/midterm-project/index.html
+++ b/midterm-project/index.html
@@ -72,9 +72,10 @@
         <label class="switch" for="checkbox"> </label>
       </div>
       <div class="container">
-        <div class="row text-center mt-4">
+        <div class="row text-center my-4">
           <h3 id="user" class="username fw-bold"></h3>
-          <h5 id="reposQty" class="mb-4"></h5>
+          <h5 id="reposQty" class="mb-2 text-danger"></h5>
+          <h5 id="followersQty" class="mb-2"></h5>
         </div>
         <div id="no-reposMsg" class="no-repos"></div>
         <div id="card-container" class="row card-list">
