add welcome message when loading page, add display styles to welcome message and error messages, fix issue that throw error when input box was empty and function getRepos was called, normalize styles, handle welcome error messages and fix functionality of search button

--- a/midterm-project/index.html
+++ b/midterm-project/index.html
@@ -76,34 +76,10 @@
           <h3 id="user" class="username fw-bold"></h3>
           <h5 id="reposQty" class="mb-2 text-danger"></h5>
           <h5 id="followersQty" class="mb-2"></h5>
+          <!-- <div id="no-reposMsg"></div> -->
+          <h3 id="welcomeMsg" class="text-center fw-bold welcomeMsg"></h3>
         </div>
-        <div id="no-reposMsg" class="no-repos"></div>
-        <div id="card-container" class="row card-list">
-          <div class="col-12 col-md-6 col-lg-4 mb-4">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title fw-bold">DinkyMovies</h5>
-                <p class="card-text fw-light">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a href="#" class="btn btn-danger">View Code</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4 mb-4">
-            <div class="card shadow">
-              <div class="card-body">
-                <h5 class="card-title fw-bold">DinkyMovies</h5>
-                <p class="card-text fw-light">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-                <a class="btn btn-danger">View Code</a>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div id="card-container" class="row card-list"></div>
       </div>
     </main>
 
