--- a/week8/tracker/activity.html
+++ b/week8/tracker/activity.html
@@ -63,10 +63,10 @@
 
           <div class="form-group">
             <label class="form-label" for="type">What type?</label>
-            <!-- TODO Create select element, use v-model to connect to the types -->
 
-            <!-- TODO Use v-for to create option elements, one for each type -->
+            <!-- Create select element, use v-model to connect to the types -->
             <select class="form-control" v-model="type">
+              <!-- Use v-for to create option elements, one for each type -->
               <option v-for="activityType in types">{{ activityType }}</option>
             </select>
           </div>
@@ -99,7 +99,11 @@
 
           <div>
             <!-- TODO Add v-on:click -->
-            <button class="btn btn-primary mt-2" type="button">
+            <button
+              class="btn btn-primary mt-2"
+              type="button"
+              v-on:click="addRecord"
+            >
               Add record
             </button>
           </div>
@@ -123,7 +127,13 @@
                 <th>Type</th>
                 <th>Media</th>
               </tr>
-              <!-- TODO use v-for to create one table row for each activity record -->
+              <!-- use v-for to create one table row for each activity record -->
+              <tr v-for="record in activityRecords">
+                <td>{{ record.date }}</td>
+                <td>{{ record.hours }}</td>
+                <td>{{ record.type }}</td>
+                <td>{{ record.medium }}</td>
+              </tr>
             </table>
           </div>
         </div>
@@ -161,6 +171,19 @@
             // used to the select-option input
             types: ["Sketching", "Drawing", "Painting"],
           };
+        },
+        methods: {
+          addRecord() {
+            let date = new Date(this.dateString);
+
+            let record = {
+              date: date,
+              hours: this.hours,
+              type: this.type,
+              medium: this.medium,
+            };
+            this.activityRecords.push(record);
+          },
         },
       });
 
