--- a/week8/tracker/activity.html
+++ b/week8/tracker/activity.html
@@ -19,7 +19,7 @@
       <h1 class="text-center">{{ activity }} Time Tracker</h1>
 
       <div id="add-hours" class="card">
-        <h2 class="card-header">Add Records</h2>
+        <h2 class="card-header bg-dark text-warning">Add Records</h2>
         <div class="card-body">
           <!-- use v-if to show this if there are validation errors -->
           <div
@@ -33,7 +33,7 @@
 
           <div class="form-group">
             <!-- TODO display name of activity in the label -->
-            <label class="form-label" for="date"
+            <label class="form-label text-primary" for="date"
               >What date did you do this activity?</label
             >
             <!-- TODO use v-model to connect this input to dateString data -->
@@ -49,7 +49,7 @@
           </div>
 
           <div class="form-group">
-            <label class="form-label" for="hours"
+            <label class="form-label text-primary" for="hours"
               >How many hours did you practice for?</label
             >
             <!-- TODO use v-model to connect this input to hours data -->
@@ -76,7 +76,7 @@
             </select>
           </div>
 
-          <div class="form-label pb-2">What media?</div>
+          <div class="form-label pb-2 text-primary">What media?</div>
 
           <div class="form-check-inline">
             <!-- Get and set values from-for medium-->
@@ -102,7 +102,7 @@
             <label class="form-check-label" for="media2"> Digital </label>
           </div>
 
-          <div class="form-label pb-2 mt-4">Activity Progress</div>
+          <div class="form-label pb-2 mt-4 text-primary">Activity Progress</div>
           <div class="form-check-inline">
             <input
               type="radio"
@@ -125,6 +125,8 @@
             />
             <label for="form-check-label" for="progress2"> Completed </label>
           </div>
+          <div class="form-label pb-2 mt-4 text-primary">Comments</div>
+          <textarea class="form-control mb-2" id="comments" rows="2"></textarea>
 
           <div>
             <!-- TODO Add v-on:click -->
@@ -140,7 +142,7 @@
       </div>
 
       <div class="card">
-        <h2 class="card-header">Activity Records</h2>
+        <h2 class="card-header bg-dark text-warning">Activity Records</h2>
 
         <div class="card-body">
           <h3>
@@ -175,7 +177,7 @@
       </div>
 
       <div class="card">
-        <h2 class="card-header">Summary</h2>
+        <h2 class="card-header bg-dark text-warning">Summary</h2>
 
         <div class="card-body">
           <!-- add computed property to calculate the total hours -->
